fix(package): Standard+ launchers keep the audit trail, and serve.bat stops dropping the OIDC flags
EVENTS-DURABLE-1 (launcher half). The engine defaults -Devents.backend to `memory`, a bounded
ring of 8,192 that forgets on restart, and the generated launchers set no override -- so a
Standard customer who restarted the service lost every audited mutation, while the compliance
page's AU-9 story rested on that trail. serve.sh/serve.bat now pass -Devents.backend=parquet off
the same inspecto-security.jar check that turns on OIDC. -Devents.dir is deliberately left unset:
it falls back to SpaceRoot.eventsDir(), so discover mode keeps one trail per space instead of
pooling every space's audit into the CWD. Personal is byte-for-byte unchanged.

EventStoreDurabilityTest pins BOTH halves -- parquet survives a restart (actor and action
included), memory drops it -- so the default is a choice and not an accident.

The row's other half could not be built as written and is NOT claimed: it asked for a boot
failure "in DR/partitioned mode", but -Dinspecto.topology=partitioned appears in no source file.
It is phase A of the signed scale-out plan, as is events.backend=db (D6). The residual is
re-filed as P2, explicitly not independently buildable.

SERVEBAT-OPTS-1, found while placing that flag. serve.bat's Standard branch was a parenthesised
`if exist inspecto-security.jar ( ... )` block holding six `set "OPTS=%OPTS% ..."` statements,
and cmd.exe expands every %OPTS% in a block ONCE, at PARSE time -- so all six expanded to the
pre-block value and only the last executed survived. Measured on an Enterprise bundle with all
four AUTH_OIDC_* env vars set, the emitted flags were exactly:

  --enable-native-access=ALL-UNNAMED -Dcontrol.port=8080 -Dspaces.root=spaces -Dauth.oidc.clientId=abc

-Dauth.mode=oidc and three of the four OIDC flags were gone, while the script still printed
"edition: Enterprise". Every Windows Standard/Enterprise bundle therefore booted with the SPA in
no-login mo